# hyperliquid-cli

./: Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs
src/config/: loader.rs  mod.rs
src/handlers/: exchange_api.rs  mod.rs
src/services/: exchange.rs  mod.rs  streaming.rs  trading.rs
src/types/: api.rs  exchange.rs  mod.rs  risk.rs  streaming.rs  trading.rs
tests/: unit_test.rs
