[package]
name = "hyperliquid-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
dotenvy = "0.15"
ethers = { version = "2.0", features = ["legacy"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rmp-serde = "1.3.0"
hex = "0.4.3"
alloy = { version = "1.0", default-features = false, features = [
    "dyn-abi",
    "sol-types", 
    "signer-local",
    "signers"
] }
hyperliquid_rust_sdk = "0.6.0"
